2006-04-04 Ladislav Hagara <hgr@vabo.cz>
	* info/patches/squashfs_patches/squashfs3.0-patch: added

2006-04-04 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.17-rc1-mm1
	* info/patches/mm_patches/2.6.17-rc1-mm1: added

2006-04-04 David Brown <dmlb2000@gmail.com>
	* ck and ck server signature now have sign instead of sig and sig isn't
	  available for download anymore

2006-04-04 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-ck3
	* info/patches/ck_patches/patch-2.6.16-ck3: added

2006-04-04 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-cks3
	* info/patches/ck_server_patches/patch-2.6.16-cks3: added

2006-04-04 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-cks2
	* info/patches/ck_server_patches/patch-2.6.16-cks2: added

2006-04-04 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-ck2
	* info/patches/ck_patches/patch-2.6.16-ck2: added

2006-04-03 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.17-rc1
	* info/patches/PRE_2_6/patch-2.6.17-rc1: added

2006-03-28 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.1
	* info/patches/maintenance_patches/patch-2.6.16.1: added

2006-03-28 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.16-mm2
	* info/patches/mm_patches/2.6.16-mm2: added
	* info/patches/maintenance_patches/patch-2.6.15.7: added

2006-03-28 David Brown <dmlb2000@gmail.com>
	* info/patches/sws2_patches/suspend2-2.2.2-for-2.6.16.patch: added

2006-03-27 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rt10
	* info/patches/realtime_patches/patch-2.6.16-rt10: added

2006-03-23 David Brown <dmlb2000@gmail.com>
	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.15.patch: added
	  compatibility with 2.6.16

2006-03-23 David Brown <dmlb2000@gmail.com>