@@ -1,0 +1,5 @@
+appliedkernels="2.6.16"
+source="reiser4-for-${appliedkernels}-1.patch.gz"
+source_url="http://ftp.namesys.com/pub/reiser4-for-2.6/${appliedkernels}/${source}"
+source_gpg="gurus.gpg:${source}.sig"
+gpg_source_url="http://download.sourcemage.org/distro/kernel/${source}.sig"
