@@ -1,3 +1,6 @@
+2006-04-05 David Brown <dmlb2000@gmail.com>
+	* info/patches/reiser4_patches/reiser4-for-2.6.16-1.patch: added
+
 2006-04-04 Ladislav Hagara <hgr@vabo.cz>
 	* info/patches/squashfs_patches/squashfs3.0-patch: added
 
